--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
           <p>&copy; 2019 Something. All rights reserved.</p>
           
           <div class="legal__links">
-            <span>Made with <span class="heart">♥</span> remotely from Anywhere</span>
+            <span>Made with remotely from Anywhere</span>
           </div>
         </div>
       </footer>
